Fixed buttons not showing up

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -14,8 +14,6 @@ button {
   font-family: inherit;
   font-weight: inherit;
   color: inherit;
-  -webkit-appearance: none;
-  appearance: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -181,8 +179,6 @@ label[for='toggle-all'] {
   bottom: 0;
   margin: auto 0;
   border: none; /* Mobile Safari */
-  -webkit-appearance: none;
-  appearance: none;
 }
 
 .todo-list li .toggle:after {
@@ -358,8 +354,6 @@ html .clear-completed:active {
   .toggle-all {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
-    -webkit-appearance: none;
-    appearance: none;
   }
 }
 
